New output types for gcp role and gcp condition expression (#345)
* Update facets.yaml

* new bucket module wit hiam condition expression as an output to be made available in service form

* update output of standard intent

* Update modules/google_cloud_storage/default/0.2/bucket.tf

Co-authored-by: coderabbitai[bot] <136622811+coderabbitai[bot]@users.noreply.github.com>

* add optional variable in variables.tf

---------

Co-authored-by: rohit <facets.raveendran@mercedes-benz.com>
Co-authored-by: coderabbitai[bot] <136622811+coderabbitai[bot]@users.noreply.github.com>

--- a/modules/service/deployment/0.1/facets.yaml
+++ b/modules/service/deployment/0.1/facets.yaml
@@ -95,6 +95,23 @@ spec:
                     pattern: '(^roles\/[A-Za-z_.-]+$)|(^\${.+}$)'
                     x-ui-placeholder: "gcp role example. Eg: roles/firestore.serviceAgent"
                     x-ui-error-message: "Value doesn't match pattern, accepted value pattern Eg: roles/firestore.serviceAgent"
+                    x-ui-typeable: true
+                    enum:
+                    - "roles/storage.objectViewer"
+                    - "roles/storage.objectAdmin"
+                    - "roles/storage.admin"
+                    - "roles/pubsub.viewer"
+                    - "roles/pubsub.editor"
+                    - "roles/pubsub.admin"
+                    - "roles/run.viewer"
+                    - "roles/run.developer"
+                    - "roles/run.admin"
+                    - "roles/secretmanager.viewer"
+                    - "roles/secretmanager.secretVersionManager"
+                    - "roles/secretmanager.admin"
+                    - "roles/cloudkms.viewer"
+                    - "roles/cloudkms.cryptoKeyEncrypterDecrypter"
+                    - "roles/cloudkms.admin"
                   condition:
                     type: object
                     title: Condition
@@ -104,6 +121,8 @@ spec:
                       expression:
                         title: Expression
                         type: string
+                        x-ui-output-type: gcp_iam_condition_expression
+                        x-ui-typeable: true
                       title:
                         title: Title
                         type: string
