--- a/modules/kubernetes_cluster/aws_eks/0.1/facets.yaml
+++ b/modules/kubernetes_cluster/aws_eks/0.1/facets.yaml
@@ -18,12 +18,10 @@ spec:
         cloudwatch_log_retention_days:
           title: CloudWatch Log Retention Days
           description: Retention period in days for cloudwatch Logs generated for this eks cluster
-          type: number
+          type: integer
           default: 365
           minimum: 1
           maximum: 3650
-          x-ui-placeholder: e.g. 30
-          type: number
           x-ui-placeholder: e.g. 30
           x-ui-overrides-only: true
         public_cidr_whitelist:
@@ -43,7 +41,7 @@ spec:
             deletion_window_in_days:
               title: Deletion Window
               description: Waiting period in days after which kms keys are deleted
-              type: number
+              type: integer
               default: 7
               minimum: 7
               maximum: 30
@@ -56,7 +54,7 @@ spec:
             rotation_period_in_days:
               title: Rotation Period for KMS in days
               description: Specifies Rotation Period for KMS in days
-              type: number
+              type: integer
               default: 90
               minimum: 1
               maximum: 365
@@ -98,7 +96,7 @@ spec:
             root_disk_volume:
               title: Root Disk Volume
               description: Disk Size in GiB for worker nodes
-              type: number
+              type: integer
               default: 100
               minimum: 30
               maximum: 500
@@ -116,7 +114,7 @@ spec:
             max_nodes:
               title: Max Nodes
               description: Maximum number of worker nodes in the node pool
-              type: number
+              type: integer
               minimum: 1
               maximum: 200
               default: 200
@@ -152,7 +150,7 @@ spec:
             root_disk_volume:
               title: Root Disk Volume
               description: Disk Size in GiB for worker nodes
-              type: number
+              type: integer
               minimum: 30
               maximum: 500
               default: 100
@@ -176,7 +174,7 @@ spec:
             max_nodes:
               title: Max Nodes
               description: Maximum number of worker nodes in the node pool
-              type: number
+              type: integer
               minimum: 1
               maximum: 200
               default: 8
@@ -243,7 +241,7 @@ spec:
             max_nodes: 
               title: Max nodes
               description: Maximum number of nodes in nodepool
-              type: number
+              type: integer
               minimum: 0
               maximum: 100
               default: 100
